# ChangeLog for Gentoo Linux System Intialization ("rc") scripts 
# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL
# Written by Daniel Robbins (drobbins@gentoo.org)

  26 Jan 2003; Martin Schlemmer <azarah@gentoo.org>:

    Fix start-stop-daemon to check the call to nice() correctly for failure,
    closing bug #14359, thanks to YAMAKURA Makoto <makoto@dsb.club.ne.jp>.

    Fix globbing $? when checking return value of fsck in /etc/init.d/checkroot
    and /etc/init.d/checkfs.  This closes bug #13320, thanks to good work from
    Malcolm Scott <m@lcolm.org.uk>.

  21 Jan 2003; Mike Frysinger <vapier@gentoo.org>:

    Updated /etc/rc.conf to add elogind support #13790.

  21 Jan 2003; Martin Schlemmer <azarah@gentoo.org>:

    Update /etc/init.d/keymaps to enable unicode if required.  This closes
    bug #14306 thanks to Danny Milosavljevic <danny_milo@yahoo.com>.

  19 Jan 2003; Martin Schlemmer <azarah@gentoo.org>:

    Fix deadlock durning shutdown if tmpfs filesystems larger than free
    memory, and swap gets deactivated, bug #13599.  Updated /etc/init.d/halt.sh
    for this.

    Merge in some fixes from Vapier <vapier@gentoo.org> to /sbin/functions.sh.
    This closes bug #13868.

    Always add "/bin:/sbin:/usr/bin:/usr/sbin" to PATH, as it fixes both
    'su -c foo' not finding start-stop-daemon (etc), and bug #14127.

    Add route for lo interface to /etc/init.d/net.lo, closing bug #14055.

  15 Jan 2003; Martin Schlemmer <azarah@gentoo.org>:

    Clear $svcdir in /sbin/rc before we run depscan to make sure we do
    not have stale entries left from hard reboot, thanks to pac1085 on
    irc.

* rc-scripts 1.4.3.2 (15 Jan 2003)

  15 Jan 2003; Martin Schlemmer <azarah@gentoo.org>:

    Truely fix bootup on seperate /var.

    Add some fixes and optimizations to /sbin/rc-update, thanks to
    Daniel Robbins <drobbins@gentoo.org>.

* rc-scripts 1.4.3.1 (15 Jan 2003)

  15 Jan 2003; Martin Schlemmer <azarah@gentoo.org>:
